Update 'dy9bzh44c-python' component image to: quay.io/rhtap_qe/rhtap-qe-python:7f88f5cd57967408363718bd8bbc3fec14e6cccf@sha256:73bcfe40c4ae99a36626c1058ebdbe2ac2fef85a4a201ea7ce981817a46e9b1e

--- a/components/dy9bzh44c-python/overlays/development/deployment-patch.yaml
+++ b/components/dy9bzh44c-python/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: dy9bzh44c-python
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-python:7f88f5cd57967408363718bd8bbc3fec14e6cccf@sha256:73bcfe40c4ae99a36626c1058ebdbe2ac2fef85a4a201ea7ce981817a46e9b1e
+          name: container-image
